# WagerrWalletAndroid

./: .gitignore  .gitmodules  PrivacyPolicy.md  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/bbp/release/: output.json
app/bifrost/release/: output.json
app/brd/release/: output.json
app/brdTestnet/release/: output.json
app/src/androidTest/java/com/biblepaywallet/database/: DatabaseTests.java
app/src/androidTest/java/com/biblepaywallet/platform/: KVStoreTests.java  PlatformTests.java
app/src/androidTest/java/com/biblepaywallet/screenshots/: JUnit4StyleTests.java
app/src/androidTest/java/com/biblepaywallet/security/: KeyStoreTests.java  NewKeyStoreTests.java
app/src/androidTest/java/com/biblepaywallet/wallet/: WalletTests.java
app/src/androidTest/java/com/bifrostwallet/database/: DatabaseTests.java
app/src/androidTest/java/com/bifrostwallet/platform/: KVStoreTests.java  PlatformTests.java
app/src/androidTest/java/com/bifrostwallet/screenshots/: JUnit4StyleTests.java
app/src/androidTest/java/com/bifrostwallet/security/: KeyStoreTests.java  NewKeyStoreTests.java
app/src/androidTest/java/com/bifrostwallet/wallet/: WalletTests.java
app/src/androidTest/java/com/breadwallet/wallet/: WalletTests.java
app/src/androidTest/java/com/digiwagewallet/database/: DatabaseTests.java
app/src/androidTest/java/com/digiwagewallet/platform/: KVStoreTests.java  PlatformTests.java
app/src/androidTest/java/com/digiwagewallet/screenshots/: JUnit4StyleTests.java
app/src/androidTest/java/com/digiwagewallet/security/: KeyStoreTests.java  NewKeyStoreTests.java
app/src/androidTest/java/com/digiwagewallet/wallet/: WalletTests.java
app/src/androidTest/java/com/nyxwallet/database/: DatabaseTests.java
app/src/androidTest/java/com/nyxwallet/platform/: KVStoreTests.java  PlatformTests.java
app/src/androidTest/java/com/nyxwallet/screenshots/: JUnit4StyleTests.java
app/src/androidTest/java/com/nyxwallet/security/: KeyStoreTests.java  NewKeyStoreTests.java
app/src/androidTest/java/com/nyxwallet/wallet/: WalletTests.java
app/src/androidTest/java/com/wagerrwallet/database/: DatabaseTests.java
app/src/androidTest/java/com/wagerrwallet/platform/: KVStoreTests.java  PlatformTests.java
app/src/androidTest/java/com/wagerrwallet/screenshots/: JUnit4StyleTests.java
app/src/androidTest/java/com/wagerrwallet/security/: KeyStoreTests.java  NewKeyStoreTests.java
app/src/androidTest/java/com/wagerrwallet/wallet/: WalletTests.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/biblepaywallet/: BiblePayApp.java
app/src/main/java/com/biblepaywallet/presenter/activities/: CurrencySettingsActivity.java  DisabledActivity.java  HomeActivity.java  InputWordsActivity.java  LoginActivity.java  PaperKeyActivity.java  PaperKeyProveActivity.java  ReEnterPinActivity.java  SetPinActivity.java  UpdatePinActivity.java  WalletActivity.java
app/src/main/java/com/biblepaywallet/wallet/: WalletsMaster.java
app/src/main/java/com/bifrostwallet/: BifrostApp.java
app/src/main/java/com/bifrostwallet/wallet/: WalletsMaster.java
app/src/main/java/com/breadwallet/wallet/: WalletsMaster.java
app/src/main/java/com/digiwagewallet/: DigiWageApp.java
app/src/main/java/com/digiwagewallet/wallet/: WalletsMaster.java
app/src/main/java/com/nyxwallet/: NYXApp.java
app/src/main/java/com/nyxwallet/wallet/: WalletsMaster.java
app/src/main/java/com/platform/: APIClient.java  BRHTTPHelper.java  GeoLocationManager.java  HTTPServer.java
app/src/main/java/com/platform/entities/: TxExplorerInfo.java  TxExplorerPayoutInfo.java
app/src/main/java/com/platform/kvstore/: ReplicatedKVStore.java
app/src/main/java/com/platform/middlewares/: APIProxy.java  HTTPFileMiddleware.java  HTTPIndexMiddleware.java
app/src/main/java/com/platform/sqlite/: PlatformSqliteHelper.java
app/src/main/java/com/platform/tools/: BRBitId.java  KVStoreManager.java
app/src/main/java/com/wagerrwallet/: WagerrApp.java
app/src/main/java/com/wagerrwallet/wallet/: WalletsMaster.java
app/src/main/res/drawable/: bch_dialog_gradient.xml  betsmart_widget.xml  brd_logo_white_svg.xml  chevron_right_white.xml  event_menu_shape.xml  event_menu_shape_testnet.xml  ic_flash.xml  redcross_circled.xml  soccer_ball.xml  tx_rounded_rect.xml  webview_layout.xml
app/src/main/res/layout/: activity_about.xml  activity_advanced.xml  activity_betsettings.xml  activity_bread.xml  activity_camera.xml  activity_currency_settings.xml  activity_disabled.xml  activity_display_currency.xml  activity_events.xml  activity_fingerprint.xml  activity_home.xml  activity_import.xml  activity_input_words.xml  activity_intro.xml  activity_intro_recover.xml  activity_nodes.xml  activity_notification.xml  activity_paper_key.xml  activity_paper_key_prove.xml  activity_pin.xml  activity_pin_template.xml  activity_qr.xml  activity_restore.xml  activity_security_center.xml  activity_settings.xml  activity_share_data.xml  activity_spend_limit.xml  activity_swap.xml  activity_sync_blockchain.xml  activity_wallet.xml  activity_web_view.xml  activity_write_down.xml  bread_alert_dialog.xml  bread_spinner_item.xml  currency_list_item.xml  dialog_bch_welcome.xml  event_details.xml  event_details_item.xml  eventtx_item.xml  fingerprint_dialog_container.xml  (+30 more)
app/src/main/res/values/: colors.xml  integer.xml  strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: pref_headers.xml
app/src/test/java/: PaperKeyTests.java
app/wage/release/: output.json
(+846 files in other folders)
